---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: ???
  Changes:
    - Production science recipe now requires 3 rails instead of 30 (to compensate for rails costing 10x as much)
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 7 June 2022
  Changes:
    - Added 2 wood to landfill recipe and renamed to 'Shallow landfill'
    - Changed deep landfill recipe to 15 shallow landfill, 15 concrete and 15 iron sticks (from 400 stone)
    - Moved deep landfill to its own technology (requires blue science) 
  Compatibility:
    - Fixed crash on load with Transport Drones
    - Removed transport drone request depots being able to request packed crates (but balance concerns remain)
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 4 June 2022
  Features:
    - Added setting to disable deep landfill and landfill changes
    - Added Robot Attrition as an optional dependency
  Bugfixes:
    - Fixed incorrect map preset warning appearing on every load
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 31 May 2022
  Bugfixes:
    - Fixed X-Logistics Default map preset unintentionally changing trees and enemy bases
    - Fixed decoratives spawning on shallow water
    - Fixed crash when a spidertron docks (Spidertron Patrols)
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 30 May 2022
  Changes:
    - Increased default chance of trees dropping seeds from 2% to 4%
  Bugfixes:
    - Fixed crash when loading without Canal Builder
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 30 May 2022
  Features:
    - Initial release