@@ -2,6 +2,7 @@
 Version: 1.0.5
 Date: ???
   Changes:
+    - Stack inserters get an extra capacity bonus at each research level (ending up at 20 capacity rather than 12)
     - Production science recipe now requires 3 rails instead of 30 (to compensate for rails costing 10x as much)
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
